bugfix & optimization